# coreason_etl_epar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BRD.md  FRD.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/coreason_etl_epar/: __init__.py  downloader.py  ingest.py  logger.py  main.py  pipeline.py  schema.py  transform_enrich.py  transform_gold.py  transform_silver.py
tests/: test_complex_edge_cases.py  test_complex_logic_expansion.py  test_downloader.py  test_downloader_edge_cases.py  test_extreme_edge_cases.py  test_gold_edge_cases.py  test_ingest_coverage.py  test_ingest_edge_cases.py  test_ingest_epar.py  test_ingest_metadata.py  test_ingest_spor.py  test_main.py  test_missing_edge_cases.py  test_pipeline.py  test_pipeline_metric.py  test_pipeline_postgres.py  test_pipeline_postgres_complex.py  test_scd2_complex_source.py  test_scd2_hash_coverage.py  test_scd2_lifecycle.py  test_scd2_ordering.py  test_schema.py  test_schema_edge_cases.py  test_status_complex_edge_cases.py  test_status_normalization_logic.py  test_status_normalization_torture.py  test_transform_cleaning.py  test_transform_enrich.py  test_transform_enrich_complex.py  test_transform_gold.py  test_transform_silver.py  test_ultra_edge_cases.py
